# ai_podcast

./: .env  .gitignore  README.md  ai_pocast.db  client.py  main.py  main_podcast_server.py  podcast_gen_server.py  podcast_server.py  pyproject.toml  refresh.py  refresh_token.py
ai_part/crawler/: crawler_by_jina.py
ai_part/llm/: llm_by_deepinfra.py
ai_part/tts/: kokoro_by_deepinfra.py
ai_part/utils/: check_db.py  get_json.py  parse_xyz.py  sql_sentence.py  tools.py
upload_part/: upload2xyz.py  upload_files.py  upload_wav.py  uploader.py
upload_part/xyz/: cookie_getter.py  delete_files.py  readme.md  upload_xyz.py
upload_part/xyz/login/: cookie_getter.py
upload_part/xyz/upload/: upload2xyz_utils.py
